ecmascript/parser/tests/test262-error-references/fail/6b9bc191e6f5ef69.js.stderr
error: Destructuring bindings require initializers
 --> $DIR/tests/test262-parser/fail/6b9bc191e6f5ef69.js:1:10
  |
1 | for (let {a: b = let};;) {}
  |          ^^^^^^^^^^^^

